# MiCochinito

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  README.md  deploy.sh  docker-compose.yml  iniciar-proyecto.bat  server-setup.sh  update.sh
backend/: .importlinter  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_tenant_y_ledger.py  0002_cuotas_e_idempotencia.py  0003_prestamos_y_multas.py  0004_actividades.py  0005_liquidacion.py  0006_cuota_por_participante.py  0007_periodos_secuencia.py  0008_prestamo_interes.py  0009_config_valor_mora.py
backend/app/: main.py
backend/app/api/: acceso_router.py  auth_router.py  schemas_acceso.py  schemas_auth.py
backend/app/core/: auth.py  config.py  deps.py  errors.py  eventbus.py  logging.py  security.py  servicio_auth.py
backend/scripts/: e2e.py  guard_anti_float.py  seed_admin.py  seed_demo.py
backend/tests/: conftest.py
backend/tests/api/: test_edge_rbac_tenancy.py  test_rbac.py  test_salud_y_errores.py
backend/tests/application/: test_unidad_de_trabajo.py
backend/tests/integration/: test_acceso_flujo.py  test_actividades_flujo.py  test_auth_flujo.py  test_cuota_por_participante.py  test_cuotas_flujo.py  test_edge_cuotas_periodicidad_mora.py  test_edge_liquidacion.py  test_ledger_servicio.py  test_liquidacion_flujo.py  test_mora_cuotas.py  test_multas_flujo.py  test_natilleras_flujo.py  test_participantes_flujo.py  test_periodicidad_flujo.py  test_periodos_flujo.py  test_prestamos_flujo.py  test_rbac_supervisor.py  test_repositorio_tenant.py  test_reversion_cuenta_reconciliacion.py  test_triggers_mysql.py
backend/tests/unit/: test_acceso_reglas.py  test_actividad.py  test_configuracion.py  test_dinero.py  test_tasa.py  (+18 more)
(+183 files in other folders)
